# CSUGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: USAGE.md
src/: csugl.h
src/core/: application.cpp  application.h  camera.cpp  camera.h  core.cpp  core.h  event.h  file_system.cpp  file_system.h  input.cpp  input.h  log.cpp  log.h  transform.h  window.cpp  window.h
src/render/: buffer.cpp  buffer.h  light.cpp  light.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h
src/utils/: asset_manager.h  model_loader.cpp  model_loader.h  singleton.h  thread_pool.h
